Added some style

--- a/style/index.css
+++ b/style/index.css
@@ -2,6 +2,11 @@ h2.title-section {
     color: rgba(10, 197, 0, 1);
     font-size: 50px;
 }
+div#request-section {
+    width: 80%;
+    margin: auto;
+    background-color: #fff;
+}
 .card-container {
     border: 1px solid rgb(255, 255, 255);
 }
