--- a/style/style.css
+++ b/style/style.css
@@ -10,11 +10,16 @@ hr {
 a:any-link {
     text-decoration: none;
 }
+header {
+    width: 80%;
+    margin: auto;
+}
 header h1 {
     color: rgba(10, 197, 0, 1);
+    float: left;
 }
 header .menu ul {
-    float: left;
+    float: right;
 }
 header .menu ul li {
     display: inline-block;
