--- a/style/style.css
+++ b/style/style.css
@@ -11,8 +11,8 @@ a:any-link {
     text-decoration: none;
 }
 header {
-    width: 80%;
-    margin: auto;
+    width: 100%;
+    height: 5vh;
 }
 header h1 {
     color: rgba(10, 197, 0, 1);
@@ -24,6 +24,20 @@ header .menu ul {
 header .menu ul li {
     display: inline-block;
 }
+header::after {
+    clear: both;
+}
+div#requestSection {
+    width: 80%;
+    margin: auto;
+    border-radius: 25px;
+
+}
 #logIn input:focus {
     background-color: #F46C00;
 } 
+
+/* All class Style */
+.bg-color {
+    background-color: rgba(0, 141, 141, 0.8);
+}
