--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,9 @@
 *{
     text-align: center;
 }
+html {
+    font-size: 14px;
+}
 body{
     background-color: #F46C00;
 }
@@ -13,6 +16,7 @@ a:any-link {
 header {
     width: 100%;
     height: 5vh;
+    border-bottom: 1px solid #fff;
 }
 header h1 {
     color: rgba(10, 197, 0, 1);
@@ -27,17 +31,31 @@ header .menu ul li {
 header::after {
     clear: both;
 }
+footer {
+    border-top: 1px solid #fff;
+    padding: 25px;
+}
+footer span {
+    font-weight: bold;
+    font-size: 1.5rem;
+}
 div#requestSection {
     width: 80%;
-    margin: auto;
-    border-radius: 25px;
+    margin: 25px auto;
+    padding: 15px;
 
 }
 #logIn input:focus {
     background-color: #F46C00;
 } 
+#logIn input {
+    border-radius: 5px;
+} 
 
 /* All class Style */
 .bg-color {
     background-color: rgba(0, 141, 141, 0.8);
+}
+.rounded-border {
+    border-radius: 15px;
 }
